# ceph-lambda-adapter

./: CMakeLists.txt  LICENSE  README.md  main.cpp  sns.cpp
aws/: lambda.cpp  lambda.h  sns.cpp  sns.h
